refactoring codice microsoft, aggiornate librerie oauth2-oidc-sdk